--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -505,9 +505,9 @@
     }
    ],
    "source": [
-    "dataset_qcm = pd.read_csv(\"_data/evaluation_set_qo_qcm.csv\", delimiter=\";\")\n",
-    "dataset_qcm.rename(columns={'true_answer': 'output_true'}, inplace=True) # to be compliant with EG1\n",
-    "dataset_qcm"
+    "mfs_dataset = pd.read_csv(\"_data/evaluation_set_qo_qcm.csv\", delimiter=\";\")\n",
+    "mfs_dataset.rename(columns={'true_answer': 'output_true'}, inplace=True) # to be compliant with EG1\n",
+    "mfs_dataset"
    ]
   },
   {
@@ -534,7 +534,7 @@
    ],
    "source": [
     "# Publish a dataset\n",
-    "dataset = {\"name\": \"MFS_questions_v002\", \"df\": dataset_qcm.to_json()}\n",
+    "dataset = {\"name\": \"MFS_questions_v002\", \"df\": mfs_dataset.to_json()}\n",
     "response = requests.post(f'{API_URL}/v1/dataset', json=dataset)\n",
     "resp = response.json()\n",
     "resp"
@@ -595,7 +595,7 @@
    "source": [
     "# Launch an experiment with a given **dataset**, **model** and set of **metrics** to compute.\n",
     "# - the model generate the \"output\" from the \"query\"\n",
-    "# - You can also pass the \"output\" column instead of a model if you generated the answer by yourself...\n",
+    "# - you can also pass the \"output\" column instead of a model if you generated the answer by yourself...\n",
     "\n",
     "models_to_test = [\"meta-llama/Meta-Llama-3.1-8B-Instruct\", \"meta-llama/Meta-Llama-3.1-70B-Instruct\"]\n",
     "experiment_ids = []\n",
@@ -735,7 +735,7 @@
     "    \n",
     "    # Build a result dataframe\n",
     "    # --\n",
-    "    # 1. build frontend measure from the observation_table (mean stc etc)\n",
+    "    # build frontend measure from the observation_table (mean stc etc)\n",
     "    df_metrics = {}\n",
     "    for metric_results in results: \n",
     "        metric_name = metric_results[\"metric_name\"]\n",
@@ -749,7 +749,7 @@
     "        df_metrics[metric_name] = df\n",
     "    \n",
     "    \n",
-    "    # Store the mean_std final measure\n",
+    "    # Stack the mean_std final measure\n",
     "    # --\n",
     "    # Create a DataFrame for mean±std\n",
     "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in df_metrics.items()}, index=[model])\n",
@@ -1735,7 +1735,7 @@
     }
    ],
    "source": [
-    "# See what inside an experiment result\n",
+    "# See what's inside an experiment result\n",
     "results"
    ]
   }
