--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -806,7 +806,9 @@
     "for model, exp_id in zip(models_to_test, experiment_ids):\n",
     "    # Get an experiment result\n",
     "    response = requests.get(f'{API_URL}/v1/experiment/{exp_id}?with_results=true')\n",
-    "    results = response.json()[\"results\"]\n",
+    "    experiment = response.json()\n",
+    "    # experiment[\"name\"] # Name of the experiment\n",
+    "    results = experiment[\"results\"]\n",
     "    \n",
     "    # Build a result dataframe\n",
     "    # --\n",
@@ -816,11 +818,11 @@
     "        metric_name = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if (isinstance(x[\"score\"], (int, float)))])\n",
     "        df = pd.DataFrame([[\n",
-    "                np.mean(arr),\n",
-    "                np.std(arr),\n",
-    "                np.median(arr),\n",
+    "                np.mean(arr), # mean\n",
+    "                np.std(arr), # std\n",
+    "                np.median(arr), # median\n",
     "                f\"{arr.mean():.2f} ± {arr.std():.2f}\",  # Formatting as 'mean±std'\n",
-    "                len(arr),\n",
+    "                len(arr), # support\n",
     "            ]], columns=[\"mean\", \"std\", \"median\", \"mean_std\", \"support\"])\n",
     "        df_metrics[metric_name] = df\n",
     "    \n",
@@ -830,8 +832,8 @@
     "    # Create a DataFrame for mean±std\n",
     "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[model])\n",
     "    df_all.append(df)\n",
-    "    supports.append(len(arr))\n",
     "\n",
+    "    supports.append(len(arr))\n",
     "final_df = pd.concat(df_all)\n",
     "\n",
     "# Add the support for each metrics\n",
