--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -8,7 +8,7 @@
     "# Demo for launching a simple experiment in EG1\n",
     "\n",
     "- code: https://github.com/etalab-ia/eg1\n",
-    "- api documentation: eg1.etalab.gouv.fr/v1/redoc"
+    "- api documentation: https://eg1.etalab.gouv.fr/redoc"
    ]
   },
   {
