feat: add new deepeval metrics

--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        " 'value': 'MFS_questions_v01'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -600,6 +600,30 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>answer_relevancy</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[query, output]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>bias</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[query, output]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>faithfulness</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[query, output, retrieval_context]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>toxicity</td>\n",
+       "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
+       "      <td>deepeval</td>\n",
+       "      <td>[query, output]</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <td>judge_completude</td>\n",
        "      <td>[0-100] score of the completude correspondance between output and output_true</td>\n",
@@ -637,7 +661,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +672,7 @@
     "# - output metric can be generated from the query (see below)\n",
     "response = requests.get(f'{API_URL}/v1/metrics')\n",
     "all_metrics = response.json()\n",
-    "df = pd.DataFrame(all_metrics).sort_values(by=[\"name\"])\n",
+    "df = pd.DataFrame(all_metrics).sort_values(by=[\"type\", \"name\"])\n",
     "HTML(df.to_html(index=False))"
    ]
   },
@@ -664,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -672,8 +696,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment MFS_judge_meta-llama/Meta-Llama-3.1-8B-Instruct_0_v0 launched: running_answers\n",
-      "Experiment MFS_judge_meta-llama/Meta-Llama-3.1-70B-Instruct_1_v0 launched: running_answers\n"
+      "Created experiment: MFS_judge_meta-llama/Meta-Llama-3.1-8B-Instruct_0_v0, status: running_answers\n",
+      "Created experiment: MFS_judge_meta-llama/Meta-Llama-3.1-70B-Instruct_1_v0, status: running_answers\n"
      ]
     }
    ],
@@ -688,35 +712,48 @@
     "    experiment = {\n",
     "        \"name\" : f\"MFS_judge_{model}_{i}_v0\",\n",
     "        \"dataset\": \"MFS_questions_v01\",\n",
-    "        \"model\": {\"name\": model, \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        \"metrics\": [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\"],\n",
+    "        \"model\": {\"name\": model, \"sampling_params\": {\"temperature\": 0.2}, \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        \"metrics\": [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\", \"bias\", \"toxicity\", \"answer_relevancy\"],\n",
     "    }\n",
     "    response = requests.post(f'{API_URL}/v1/experiment', json=experiment)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
     "        experiment_ids.append(resp[\"id\"])\n",
-    "        print(f'Experiment {resp[\"name\"]} launched: {resp[\"experiment_status\"]}')\n",
+    "        print(f'Created experiment: {resp[\"name\"]} ({res[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
     "    else:\n",
     "        print(resp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "id": "f40ad66f-2920-47d2-9cac-1edc51c863b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated experiment: MFS_judge_meta-llama/Meta-Llama-3.1-8B-Instruct_0_v0 launched, status: running_metrics\n",
+      "{'detail': 'Experiment is running (running_metrics), please try again later'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add a metric to an existing experiment\n",
-    "# - If you to update a experiment without relaucnhing tyhe answer generation\n",
+    "# Add a metric to an existing experiment(s)\n",
+    "# - If you want to update one or many metriccs without relaucnhing the answer generation\n",
     "# --\n",
-    "#exp_id = _the_id_of_the_targeted_exeperiment_\n",
-    "#experiment = {\n",
-    "#    \"metrics\": [\"qcm_exactness\"],\n",
-    "#    \"skip_answers_generation\": True,\n",
-    "#}\n",
-    "#response = requests.patch(f'{API_URL}/v1/experiment/{exp_id}', json=experiment)\n",
-    "#response.json()"
+    "for exp_id in experiment_ids:\n",
+    "    experiment = {\n",
+    "    \"metrics\": [\"output_length\", \"bias\", \"toxicity\", \"answer_relevancy\"],\n",
+    "    \"skip_answers_generation\": True,\n",
+    "    }\n",
+    "    response = requests.patch(f'{API_URL}/v1/experiment/{exp_id}', json=experiment)\n",
+    "    resp = response.json()\n",
+    "    if \"id\" in resp:\n",
+    "        print(f'Updated experiment: {resp[\"name\"]} ({res[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
+    "    else:\n",
+    "        print(resp)\n"
    ]
   },
   {
@@ -729,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
@@ -754,45 +791,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>answer_relevancy</th>\n",
+       "      <th>bias</th>\n",
        "      <th>judge_completude</th>\n",
        "      <th>judge_exactness</th>\n",
        "      <th>judge_notator</th>\n",
        "      <th>output_length</th>\n",
+       "      <th>toxicity</th>\n",
        "      <th>support</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td>28.59 ± 23.40</td>\n",
-       "      <td>0.05 ± 0.22</td>\n",
-       "      <td>3.62 ± 2.12</td>\n",
-       "      <td>297.26 ± 122.01</td>\n",
+       "      <td>0.94 ± 0.15</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>28.08 ± 22.09</td>\n",
+       "      <td>0.08 ± 0.27</td>\n",
+       "      <td>3.74 ± 2.24</td>\n",
+       "      <td>292.64 ± 102.62</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td>36.92 ± 22.58</td>\n",
-       "      <td>0.13 ± 0.33</td>\n",
-       "      <td>5.03 ± 2.60</td>\n",
-       "      <td>236.10 ± 111.81</td>\n",
-       "      <td>39</td>\n",
+       "      <td>0.94 ± 0.18</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>36.15 ± 25.36</td>\n",
+       "      <td>0.15 ± 0.36</td>\n",
+       "      <td>4.79 ± 2.68</td>\n",
+       "      <td>237.24 ± 95.72</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       judge_completude judge_exactness  \\\n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct     28.59 ± 23.40     0.05 ± 0.22   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct    36.92 ± 22.58     0.13 ± 0.33   \n",
+       "                                       answer_relevancy         bias  \\\n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.94 ± 0.15  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.94 ± 0.18  0.00 ± 0.00   \n",
        "\n",
-       "                                       judge_notator    output_length  support  \n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.62 ± 2.12  297.26 ± 122.01       39  \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct   5.03 ± 2.60  236.10 ± 111.81       39  "
+       "                                       judge_completude judge_exactness  \\\n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct     28.08 ± 22.09     0.08 ± 0.27   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct    36.15 ± 25.36     0.15 ± 0.36   \n",
+       "\n",
+       "                                       judge_notator    output_length  \\\n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.74 ± 2.24  292.64 ± 102.62   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.79 ± 2.68   237.24 ± 95.72   \n",
+       "\n",
+       "                                           toxicity  support  \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00       39  \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00       37  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,6 +861,8 @@
     "    # Get an experiment result\n",
     "    response = requests.get(f'{API_URL}/v1/experiment/{exp_id}?with_results=true')\n",
     "    experiment = response.json()\n",
+    "    if experiment[\"experiment_status\"] != \"finished\":\n",
+    "        print(f\"Warning: experiment {exp_id} is not finished yet...\")\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    results = experiment[\"results\"]\n",
     "    \n",
