feat: notebook demo + Timer + fix extra_params

--- a/notebooks/run_experiences_demo.ipynb
+++ b/notebooks/run_experiences_demo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,9 @@
     "\n",
     "API_URL = \"http://localhost:8000\"\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
-    "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")"
+    "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
+    "MFS_API_URL = \"https://franceservices.staging.etalab.gouv.fr/api/v1\"\n",
+    "MFS_API_KEY = \"fee84132-e662-42d0-b198-cfda9de95c51\""
    ]
   },
   {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f466a3ee-9b1a-4115-8d71-94297d3ced2e",
    "metadata": {},
    "outputs": [
@@ -521,7 +523,7 @@
        "38          Assurance retraite               Retraite  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,20 +546,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'error': 'DuplicateEntryError',\n",
-       " 'detail': \"Duplicate entry detected for constraint 'datasets_name_key': name = MFS_questions_v01\",\n",
-       " 'key': 'name',\n",
-       " 'value': 'MFS_questions_v01'}"
+       "{'name': 'MFS_questions_v01',\n",
+       " 'id': 1,\n",
+       " 'has_query': True,\n",
+       " 'has_output': False,\n",
+       " 'has_output_true': True,\n",
+       " 'size': 39}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -604,25 +608,25 @@
        "      <td>answer_relevancy</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
        "      <td>deepeval</td>\n",
-       "      <td>[query, output]</td>\n",
+       "      <td>[output, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>bias</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
        "      <td>deepeval</td>\n",
-       "      <td>[query, output]</td>\n",
+       "      <td>[output, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>faithfulness</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
        "      <td>deepeval</td>\n",
-       "      <td>[query, output, retrieval_context]</td>\n",
+       "      <td>[output, query, retrieval_context]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>toxicity</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
        "      <td>deepeval</td>\n",
-       "      <td>[query, output]</td>\n",
+       "      <td>[output, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>judge_completude</td>\n",
@@ -661,7 +665,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -696,8 +700,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created experiment: MFS_judge_meta-llama/Meta-Llama-3.1-8B-Instruct_0_v0, status: running_answers\n",
-      "Created experiment: MFS_judge_meta-llama/Meta-Llama-3.1-70B-Instruct_1_v0, status: running_answers\n"
+      "Created experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (21), status: running_answers\n",
+      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (22), status: running_answers\n",
+      "Created experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (23), status: running_answers\n",
+      "Created experiment: MFS_questions_mfs-rag-baseline_3_v0 (24), status: running_answers\n"
      ]
     }
    ],
@@ -706,27 +712,42 @@
     "# - the model generate the \"output\" from the \"query\"\n",
     "# - you can also pass the \"output\" column instead of a model if you generated the answer by yourself...\n",
     "\n",
-    "models_to_test = [\"meta-llama/Meta-Llama-3.1-8B-Instruct\", \"meta-llama/Meta-Llama-3.1-70B-Instruct\"]\n",
+    "# Designing my experiments\n",
+    "sampling_params = {\"temperature\": 0.2} # use the same sampling params for all in this evalation\n",
+    "models_to_test = [\n",
+    "    {\"name\": \"AgentPublic/llama3-instruct-8b\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    {\"name\": \"meta-llama/Meta-Llama-3.1-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    {\n",
+    "      \"_name\": \"mfs-rag-baseline\",\n",
+    "      \"name\": \"AgentPublic/llama3-instruct-8b\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
+    "      \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "    },    \n",
+    "]\n",
+    "\n",
+    "# Lauching the experiments\n",
     "experiment_ids = []\n",
     "for i, model in enumerate(models_to_test):\n",
+    "    name = model[\"_name\"] if model.get(\"_name\") else model[\"name\"]\n",
+    "    model[\"sampling_params\"] = sampling_params\n",
     "    experiment = {\n",
-    "        \"name\" : f\"MFS_judge_{model}_{i}_v0\",\n",
+    "        \"name\" : f\"MFS_questions_{name}_{i}_v0\",\n",
     "        \"dataset\": \"MFS_questions_v01\",\n",
-    "        \"model\": {\"name\": model, \"sampling_params\": {\"temperature\": 0.2}, \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        \"model\": model,\n",
     "        \"metrics\": [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\", \"bias\", \"toxicity\", \"answer_relevancy\"],\n",
     "    }\n",
     "    response = requests.post(f'{API_URL}/v1/experiment', json=experiment)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
     "        experiment_ids.append(resp[\"id\"])\n",
-    "        print(f'Created experiment: {resp[\"name\"]} ({res[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
+    "        print(f'Created experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
     "    else:\n",
     "        print(resp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "f40ad66f-2920-47d2-9cac-1edc51c863b5",
    "metadata": {},
    "outputs": [
@@ -734,8 +755,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated experiment: MFS_judge_meta-llama/Meta-Llama-3.1-8B-Instruct_0_v0 launched, status: running_metrics\n",
-      "{'detail': 'Experiment is running (running_metrics), please try again later'}\n"
+      "Updated experiment: MFS_questions_AgentPublic/llama3-instruct-8b_0_v0 (6), status: running_metrics\n",
+      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (7), status: running_metrics\n",
+      "Updated experiment: MFS_questions_meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (8), status: running_metrics\n",
+      "Updated experiment: MFS_questions_mfs-baseline_3_v0 (9), status: running_metrics\n"
      ]
     }
    ],
@@ -745,13 +768,13 @@
     "# --\n",
     "for exp_id in experiment_ids:\n",
     "    experiment = {\n",
-    "    \"metrics\": [\"output_length\", \"bias\", \"toxicity\", \"answer_relevancy\"],\n",
+    "    \"metrics\": [\"answer_relevancy\"],\n",
     "    \"skip_answers_generation\": True,\n",
     "    }\n",
     "    response = requests.patch(f'{API_URL}/v1/experiment/{exp_id}', json=experiment)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
-    "        print(f'Updated experiment: {resp[\"name\"]} ({res[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
+    "        print(f'Updated experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
     "    else:\n",
     "        print(resp)\n"
    ]
@@ -766,10 +789,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:206: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:163: RuntimeWarning: invalid value encountered in divide\n",
+      "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
+      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:198: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/tmp/ipykernel_3988470/2964690404.py:26: RuntimeWarning: Mean of empty slice.\n",
+      "  f\"{arr.mean():.2f} ± {arr.std():.2f}\",  # Formatting as 'mean±std'\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -803,26 +844,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td>0.94 ± 0.15</td>\n",
+       "      <th>AgentPublic/llama3-instruct-8b</th>\n",
+       "      <td>0.93 ± 0.14</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>28.08 ± 22.09</td>\n",
-       "      <td>0.08 ± 0.27</td>\n",
-       "      <td>3.74 ± 2.24</td>\n",
-       "      <td>292.64 ± 102.62</td>\n",
+       "      <td>27.82 ± 21.74</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>3.13 ± 1.96</td>\n",
+       "      <td>301.97 ± 92.85</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
+       "      <td>0.92 ± 0.19</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>26.41 ± 16.87</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>3.54 ± 1.78</td>\n",
+       "      <td>296.67 ± 97.40</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td>0.94 ± 0.18</td>\n",
+       "      <td>0.99 ± 0.02</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>36.15 ± 25.36</td>\n",
-       "      <td>0.15 ± 0.36</td>\n",
-       "      <td>4.79 ± 2.68</td>\n",
-       "      <td>237.24 ± 95.72</td>\n",
+       "      <td>35.64 ± 23.70</td>\n",
+       "      <td>0.05 ± 0.22</td>\n",
+       "      <td>4.79 ± 2.30</td>\n",
+       "      <td>239.13 ± 91.20</td>\n",
        "      <td>0.00 ± 0.00</td>\n",
-       "      <td>37</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mfs-rag-baseline</th>\n",
+       "      <td>nan ± nan</td>\n",
+       "      <td>0.00 ± 0.00</td>\n",
+       "      <td>40.92 ± 26.43</td>\n",
+       "      <td>0.13 ± 0.33</td>\n",
+       "      <td>5.41 ± 2.51</td>\n",
+       "      <td>129.18 ± 66.80</td>\n",
+       "      <td>nan ± nan</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -830,23 +893,31 @@
       ],
       "text/plain": [
        "                                       answer_relevancy         bias  \\\n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.94 ± 0.15  0.00 ± 0.00   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.94 ± 0.18  0.00 ± 0.00   \n",
+       "AgentPublic/llama3-instruct-8b              0.93 ± 0.14  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct       0.92 ± 0.19  0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct      0.99 ± 0.02  0.00 ± 0.00   \n",
+       "mfs-rag-baseline                              nan ± nan  0.00 ± 0.00   \n",
        "\n",
        "                                       judge_completude judge_exactness  \\\n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct     28.08 ± 22.09     0.08 ± 0.27   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct    36.15 ± 25.36     0.15 ± 0.36   \n",
+       "AgentPublic/llama3-instruct-8b            27.82 ± 21.74     0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct     26.41 ± 16.87     0.00 ± 0.00   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct    35.64 ± 23.70     0.05 ± 0.22   \n",
+       "mfs-rag-baseline                          40.92 ± 26.43     0.13 ± 0.33   \n",
        "\n",
-       "                                       judge_notator    output_length  \\\n",
-       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.74 ± 2.24  292.64 ± 102.62   \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.79 ± 2.68   237.24 ± 95.72   \n",
+       "                                       judge_notator   output_length  \\\n",
+       "AgentPublic/llama3-instruct-8b           3.13 ± 1.96  301.97 ± 92.85   \n",
+       "meta-llama/Meta-Llama-3.1-8B-Instruct    3.54 ± 1.78  296.67 ± 97.40   \n",
+       "meta-llama/Meta-Llama-3.1-70B-Instruct   4.79 ± 2.30  239.13 ± 91.20   \n",
+       "mfs-rag-baseline                         5.41 ± 2.51  129.18 ± 66.80   \n",
        "\n",
        "                                           toxicity  support  \n",
+       "AgentPublic/llama3-instruct-8b          0.00 ± 0.00       39  \n",
        "meta-llama/Meta-Llama-3.1-8B-Instruct   0.00 ± 0.00       39  \n",
-       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00       37  "
+       "meta-llama/Meta-Llama-3.1-70B-Instruct  0.00 ± 0.00       38  \n",
+       "mfs-rag-baseline                          nan ± nan        8  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +957,8 @@
     "    # Stack the mean_std final measure\n",
     "    # --\n",
     "    # Create a DataFrame for mean±std\n",
-    "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[model])\n",
+    "    name = model[\"_name\"] if model.get(\"_name\") else model[\"name\"]\n",
+    "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[name])\n",
     "    df_all.append(df)\n",
     "\n",
     "    supports.append(len(arr))\n",
